[package] 
name = "cycle"
version = "0.2.0"
edition = "2021"
readme  = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/cycle"
repository    = "https://github.com/jamesgober/cycle"
homepage      = "https://github.com/jamesgober/cycle"

description = "Ultra-high performance async runtime with fast task cycling, lock-free scheduling, and zero-overhead performance"
keywords = [
    "async", 
    "runtime", 
    "performance", 
    "concurrent",
    "lock-free"
]
categories = [
    "asynchronous",
    "concurrency", 
    "network-programming",
    "web-programming",
    "development-tools"
]

exclude = [
    ".github/",
    "benches/",
    "docs/",
    "dev/",
]

authors = [
    "James Gober <contact@jamesgober.com>"
]

[features]
default = ["rt", "net", "time", "sync"]
rt = []
net = ["rt", "dep:mio", "dep:socket2"]
time = ["rt"]
sync = ["rt"]
io-uring = ["net", "dep:io-uring"]
numa = ["rt", "dep:hwloc2"]
metrics = ["dep:sysinfo"]
full = ["rt", "net", "time", "sync", "io-uring", "numa", "metrics"]

[dependencies]
# Core dependencies
crossbeam = "0.8"
once_cell = "1.19"
futures = "0.3"
num_cpus = "1.16"
fastrand = "2.0"
parking_lot = "0.12"

# Networking
mio = { version = "0.8", optional = true, features = ["os-poll", "net"] }
socket2 = { version = "0.5", optional = true }

# Linux optimizations
io-uring = { version = "0.6", optional = true }
hwloc2 = { version = "2.0", optional = true }

# Metrics
sysinfo = { version = "0.30", optional = true }

# Utility
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "benchmark"
required-features = ["rt"]

[[example]]
name = "compare_tokio"
required-features = ["rt"]
